Add CarModel coverage